--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,12 @@
     "react-scripts": "3.3.0",
     "serialize-javascript": "^2.1.2"
   },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "react-test-renderer": "^16.11.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
